使用对象配置，修改@Inject属性修饰符

--- a/quarkus-web/pom.xml
+++ b/quarkus-web/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
