--- a/quarkus-web/src/main/resources/application.yaml
+++ b/quarkus-web/src/main/resources/application.yaml
@@ -6,3 +6,24 @@ quarkus:
   http:
     port: 8080
     test-port: 9000
+  datasource:
+    db-kind: postgresql
+    username: mgmt
+    password: mgmt
+    jdbc:
+      url: jdbc:postgresql://localhost:5432/mgmt
+      max-size: 10
+      min-size: 2
+
+  hibernate-orm:
+    database:
+      generation: none
+    log:
+      sql: true
+      format-sql: false
+
+  liquibase:
+    migrate-at-start: true
+    change-log: db/changeLog.xml
+    validate-on-migrate: true
+    clean-at-start: false
