--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Set up PostgreSQL 14
+      uses: CasperWA/postgresql-action@v1.2
+      with:
+        postgresql version: '14'
+        postgresql db: 'mgmt'
+        postgresql user: 'mgmt'
+        postgresql password: 'mgmt'
+        postgresql port: '5432'
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
