--- a/quarkus-web/pom.xml
+++ b/quarkus-web/pom.xml
@@ -26,6 +26,10 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-hibernate-validator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-agroal</artifactId>
 		</dependency>
 		<dependency>
